<resources>
    <string name="app_name">Uber-Driver</string>

    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="next">Next</string>
    <string name="smspara">By continuing you may receive an SMS for verification. Message and data rates may apply</string>

    <string name="get_started">Get Started</string>
    <string name="choose">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="click_social">By clicking on a social option you may receive an SMS for verification. Message and data rates may apply.</string>
    <string name="name">What\'s your name?</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="checkpara">Check the box to indicate you are at least 18 years of age, agree to the Terms &amp; conditions and acknowledge the Privacy Policy.</string>
    <string name="welcome_back_sign_in_to_continue">Welcome ! sign in to continue</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_can_t_sign_in">I can\'t sign in</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="enter_the_6_digit_code_sent_to_your_number">Enter the 6-digit code sent to your number</string>
    <string name="select_your_preferred_payment_method">Select your preferred payment method</string>
    <string name="amazon">Amazon Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="cash">Cash</string>
    <string name="paytm">PayTM</string>
    <string name="card">Credit Card</string>
    <string name="gift">Gift Card</string>
    <string name="do_this_later">DO THIS LATER</string>
    <string name="skip">SKIP</string>
    <string name="do_you_have_promo">Do you have a Promo?</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="choosewho">Choose who are you?</string>
    <string name="driver">I\'m a Driver</string>
    <string name="passanger">I\'m a Passanger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rover">Uber</string>
    <string name="move_with_safety">Move with Safety</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_91">+91</string>
    <string name="resend_code_in_30_sec">Resend code in : 30 sec</string>
    <string name="image_contentDescription">image</string>
    <string name="title_select_image">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="add_details">Add Details</string>
    <string name="taxi_number">Taxi Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="license_number">License Number</string>
    <string name="model_number">Model Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="Driver_home">Home</string>
    <string name="message">Messages</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="your_trips">Your Trips</string>
    <string name="wallet">Wallet</string>
    <string name="decline">Decline</string>
    <string name="uber">Uber</string>
    <string name="_4_5">4.5</string>
    <string name="Accept">Accept</string>
    <string name="title_activity_start_trip">Map</string>
    <string name="start_trip">Start Trip</string>
    <string name="title_activity_route">Map</string>
    <string name="title_activity_start_journey">Map</string>

</resources>