<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cred"
    android:clipChildren="false">

    <club.cred.synth.views.SynthImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:nextFocusUp="@color/cred"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <club.cred.synth.views.SynthButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@id/TextView"
        app:layout_constraintTop_toBottomOf="@id/TextView"
        app:neuButtonDrawable="@drawable/ic_fb"
        app:neuButtonDrawablePitRadius="20dp"
        app:neuButtonType="elevated_soft"
        app:neuPlatformAppearance="@style/button_platform_appearance" />

    <club.cred.synth.views.SynthButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/btnFacebook"
        app:layout_constraintStart_toStartOf="@id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        app:neuButtonDrawable="@drawable/ic_google"
        app:neuButtonDrawablePitRadius="20dp"
        app:neuButtonType="elevated_soft"
        app:neuPlatformAppearance="@style/button_platform_appearance" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/roboto_light"
        android:padding="@dimen/_3sdp"
        android:text="@string/click_social"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>