<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cred"
    android:clipChildren="false">

    <club.cred.synth.views.SynthImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:nextFocusUp="@color/cred"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:backgroundTint="@color/light_orange"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/first"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextView" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:backgroundTint="@color/light_orange"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/last"
        android:paddingBottom="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintTop_toTopOf="@id/etFirstName" />

    <club.cred.synth.views.SynthButton
        android:id="@+id/btnNext"
        layout_marginBottom="@dimen/_20sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neuButtonType="elevated_soft"
        app:neuPlatformAppearance="@style/button_platform_appearance" />

</androidx.constraintlayout.widget.ConstraintLayout>