<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cred"
    android:clipChildren="false">

    <club.cred.synth.views.SynthImageButton
        android:id="@+id/btnBackPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:nextFocusUp="@color/cred"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvWelcomeBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/welcome_back_sign_in_to_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBackPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="@color/light_orange"
        android:drawableEnd="@drawable/ic_close_eye"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/_14sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvWelcomeBack" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/i_forgot_my_password"
        android:textColor="@color/link_light"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/tvDontAccount"
        app:layout_constraintStart_toStartOf="@id/tvCantSignIn" />

    <TextView
        android:id="@+id/tvDontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/i_don_t_have_an_account"
        android:textColor="@color/link_light"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/tvCantSignIn"
        app:layout_constraintStart_toStartOf="@id/tvCantSignIn" />

    <TextView
        android:id="@+id/tvCantSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_22sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/i_can_t_sign_in"
        android:textColor="@color/link_light"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/btnNextPassword"
        app:layout_constraintStart_toStartOf="@id/btnNextPassword" />

    <club.cred.synth.views.SynthButton
        android:id="@+id/btnNextPassword"
        layout_marginBottom="@dimen/_20sdp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neuButtonType="elevated_soft"
        app:neuPlatformAppearance="@style/button_platform_appearance" />

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        app:layout_constraintStart_toStartOf="@id/TvWelcomeBack"-->
    <!--        android:layout_marginLeft="@dimen/_16sdp"-->
    <!--        app:passwordToggleEnabled="true"-->
    <!--        android:layout_marginTop="@dimen/_30sdp"-->
    <!--        android:layout_marginRight="@dimen/_16sdp"-->
    <!--        app:boxStrokeColor="@color/white"-->
    <!--       app:endIconTint="@color/white"-->
    <!--        app:hintTextColor="@color/white"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/TvWelcomeBack"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@color/cred"-->
    <!--            android:hint="@string/enter_your_password"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textColorHighlight="@color/white"-->
    <!--            android:textColorHint="@color/white"-->
    <!--            android:textColorLink="@color/white" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>